--- a/Sunduk.PWA/Components/CAM/ContourComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ContourComponent.razor
@@ -1,4 +1,4 @@
-﻿<MudField Label="Контур" Variant="Variant.Filled" Margin="Margin.Dense">
+﻿<MudField Label="Контур" Variant="Variant.Filled" Margin="Margin.Dense" DisableUnderLine="true">
     <MudList DisableGutters="true" Dense="true">
         @foreach (var element in Contour)
         {
@@ -7,9 +7,27 @@
                     <MudGrid Justify="Justify.FlexStart" Spacing=1>
                         @switch (element)
                         {
+                            case Point point:
+                            <MudItem>
+                                <MudSelect T="ElementType" Value="ElementType.Point" Variant="FieldsVariant" Immediate="true" ReadOnly="true" OpenIcon="null"
+                                Label="Тип" Margin="Margin.Dense" Style="width: 102px">
+                                    <MudSelectItem T="ElementType" Value="ElementType.Point">Старт</MudSelectItem>
+                                </MudSelect>
+                            </MudItem>
+                            <MudItem>
+                                <MudTextField @bind-Value="point.X" Variant="FieldsVariant" Immediate="true"
+                                AdornmentColor="Color.Dark" Adornment="Adornment.Start" Label="X" 
+                                Margin="Margin.Dense" Style="width: 95px" Converter="Util.NullableDoubleConverterWithZero"/>
+                            </MudItem>
+                            <MudItem>
+                                <MudTextField @bind-Value="point.Z" Variant="FieldsVariant" Immediate="true"
+                                AdornmentColor="Color.Dark" Adornment="Adornment.Start" Label="Z" 
+                                Margin="Margin.Dense" Style="width: 95px" Converter="Util.NullableDoubleConverterWithZero"/>
+                            </MudItem>
+                                break;
                             case Line line:
                             <MudItem>
-                                <MudSelect T="ElementType" Value="ElementType.Line" Variant="FieldsVariant" Immediate="true" ValueChanged="(() => SetArc(Contour.IndexOf(line)))"
+                                <MudSelect T="ElementType" Value="ElementType.Line" Variant="FieldsVariant" Immediate="true" ValueChanged="((type) => SetArc(Contour.IndexOf(line), type))"
                                 Label="Тип" Margin="Margin.Dense" Style="width: 102px">
                                     <MudSelectItem T="ElementType" Value="ElementType.Line">Линия</MudSelectItem>
                                     <MudSelectItem T="ElementType" Value="ElementType.Arc">Дуга</MudSelectItem>
@@ -18,22 +36,22 @@
                             <MudItem>
                                 <MudTextField @bind-Value="line.X" Variant="FieldsVariant" Immediate="true"
                                 AdornmentColor="Color.Dark" Adornment="Adornment.Start" Label="X" 
-                                Margin="Margin.Dense" Style="width: 85px" Converter="Util.DoubleConverter"/>
+                                Margin="Margin.Dense" Style="width: 95px" Converter="Util.NullableDoubleConverterWithZero"/>
                             </MudItem>
                             <MudItem>
                                 <MudTextField @bind-Value="line.Z" Variant="FieldsVariant" Immediate="true"
                                 AdornmentColor="Color.Dark" Adornment="Adornment.Start" Label="Z" 
-                                Margin="Margin.Dense" Style="width: 85px" Converter="Util.DoubleConverter"/>
+                                Margin="Margin.Dense" Style="width: 95px" Converter="Util.NullableDoubleConverterWithZero"/>
                             </MudItem>
                             <MudItem>
                                 <MudTextField @bind-Value="line.Angle" Variant="FieldsVariant" Immediate="true"
                                 AdornmentColor="Color.Dark" Adornment="Adornment.Start" Label="A" 
-                                Margin="Margin.Dense" Style="width: 85px" Converter="Util.DoubleConverter"/>
+                                Margin="Margin.Dense" Style="width: 95px" Converter="Util.DoubleConverter"/>
                             </MudItem>
                                 break;
                             case Arc arc:
                             <MudItem>
-                                <MudSelect T="ElementType" Value="ElementType.Arc" Variant="FieldsVariant" Immediate="true" ValueChanged="(() => SetLine(Contour.IndexOf(arc)))"
+                                <MudSelect T="ElementType" Value="ElementType.Arc" Variant="FieldsVariant" Immediate="true" ValueChanged="((type) => SetLine(Contour.IndexOf(arc), type))"
                                 Label="Тип" Margin="Margin.Dense" Style="width: 102px">
                                     <MudSelectItem T="ElementType" Value="ElementType.Line">Линия</MudSelectItem>
                                     <MudSelectItem T="ElementType" Value="ElementType.Arc">Дуга</MudSelectItem>
@@ -42,55 +60,41 @@
                             <MudItem>
                                 <MudTextField @bind-Value="arc.X" Variant="FieldsVariant" Immediate="true"
                                 AdornmentColor="Color.Dark" Adornment="Adornment.Start" Label="X" 
-                                Margin="Margin.Dense" Style="width: 85px" Converter="Util.DoubleConverter"/>
+                                Margin="Margin.Dense" Style="width: 95px" Converter="Util.NullableDoubleConverterWithZero"/>
                             </MudItem>
                             <MudItem>
                                 <MudTextField @bind-Value="arc.Z" Variant="FieldsVariant" Immediate="true"
                                 AdornmentColor="Color.Dark" Adornment="Adornment.Start" Label="Z" 
-                                Margin="Margin.Dense" Style="width: 85px" Converter="Util.DoubleConverter"/>
+                                Margin="Margin.Dense" Style="width: 95px" Converter="Util.NullableDoubleConverterWithZero"/>
                             </MudItem>
                             <MudItem>
                                 <MudTextField @bind-Value="arc.Radius" Variant="FieldsVariant" Immediate="true"
                                 AdornmentColor="Color.Dark" Adornment="Adornment.Start" Label="R" 
-                                Margin="Margin.Dense" Style="width: 85px" Converter="Util.DoubleConverter"/>
+                                Margin="Margin.Dense" Style="width: 95px" Converter="Util.DoubleConverter"/>
                             </MudItem>
                                 break;
                         }
-                        @*<MudItem>
-                            <MudIconButton Variant="Variant.Outlined" Icon="@Icons.Material.Filled.Remove" OnClick="(() => Contour.Remove(element))"/>
-                        </MudItem>*@
+                        @if(Contour.IndexOf(element) > 0)
+                        {
+                            <MudItem>
+                                <MudIconButton Style="margin-top: 3px; height: 40px; width: 40px" Variant="Variant.Outlined" Icon="@Icons.Material.Filled.Remove" OnClick="(() => Contour.Remove(element))"/>
+                            </MudItem>
+                        }
                     </MudGrid>
                 </MudPaper>
             </MudListItem>
         }
-        <MudPaper Outlined="true" Class="py-n2 my-n2">
-            <MudListItem Dense="true" OnClick="(() => Contour.Add(new Line(0, 0)))">
-                <MudField Variant="Variant.Filled" Margin="Margin.Dense" >
-                    <MudText>Добавить</MudText>
-                </MudField>
+        <MudPaper Outlined="true">
+            <MudListItem Dense="true" OnClick="(() => Contour.Add(new Line(null, null)))">
+                <MudGrid Justify="Justify.Center">
+                    <MudItem>
+                        <MudIcon Class="mt-1 mb-n1" Icon="@Icons.Material.Filled.Add"/>
+                    </MudItem>
+                </MudGrid>
             </MudListItem>
         </MudPaper>
     </MudList>
 </MudField>
-
-<MudTextField @bind-Value="ElementIndex"/>
-@foreach (var item in Contour)
-{
-    switch (item)
-    {
-        case Line line:
-            <MudText>
-                @($"Линия X:{line.X} Z:{line.Z} A:{line.Angle}")
-            </MudText>
-            break;
-        case Arc arc:
-             <MudText>
-                @($"Дуга X:{arc.X} Z:{arc.Z} A:{arc.Radius}")
-            </MudText>
-            break;
-    }
-    
-}
 
 
 @code {
@@ -103,27 +107,29 @@
 
     public enum ElementType
     {
+        Point,
         Line,
         Arc
     }
 
     public List<Element> Contour { get; set; } = new List<Element>()
     {
-        new Line(0, 0),
-        new Line(6, 0),
-        new Arc(6, 0, 3, Sunduk.PWA.Infrastructure.Direction.CCW),
-        new Line(10, 2)
+        new Point(null, null),
     };
 
-    private void SetArc(int index)
+    private void SetArc(int index, ElementType type)
     {
-        ElementIndex = index;
-        Contour[index] = new Arc(0, 0, 3, Sunduk.PWA.Infrastructure.Direction.CCW);
+        if (type is ElementType.Arc)
+        {
+            Contour[index] = new Arc(null, null, 0, Sunduk.PWA.Infrastructure.Direction.CCW);
+        }
     }
 
-    private void SetLine(int index)
+    private void SetLine(int index, ElementType type)
     {
-        ElementIndex = index;
-        Contour[index] = new Line(0, 0);
+        if (type is ElementType.Line)
+        {
+            Contour[index] = new Line(null, null);
+        }
     }
 }
