--- a/Sunduk.PWA/Components/Stuff/DrillAngleComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/DrillAngleComponent.razor
@@ -6,7 +6,7 @@
                           @onfocusout="() => CurrentImage = Images.Drill"/>
         </MudItem>
         <MudItem xs="6">
-            <MudTextField @bind-Value="_DrillAngle" T="string" Label="Угол" Variant="Variant.Filled" Immediate="true"
+            <MudTextField @bind-Value="_DrillAngle" T="string" Label="Угол" Variant="Variant.Filled" Adornment="Adornment.End" AdornmentText="°" Immediate="true"
                           @onfocus="() => CurrentImage = Images.DrillAngle"
                           @onfocusout="() => CurrentImage = Images.Drill"/>
         </MudItem>
