--- a/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
@@ -130,7 +130,18 @@
                     </MudTextField>
                 </MudItem>
             </MudExpansionPanel>
+        @if(Thread.Valid(ThreadDiameter, ThreadPitch) && ThreadStandart == ThreadStandart.NPT && ThreadType == CuttingType.External && false)
+        {
+            <MudExpansionPanel Text="Пример проточки под резьбу">
+                <MudItem xs="12">
+                    <MudTextField Variant="Variant.Outlined" Style="font-family: 'Roboto Mono', monospace; font-size: small;" Margin="Margin.Dense" ReadOnly="true" Lines="3" Value="@($"G0 X{ApproachDiameter} Z{StartPointZ.NC()} S{SpindleSpeed.Round(100)} M3 G97\n" +
+                                $"G76 P0201{Thread.Profile(ThreadStandart)} Q{Passes[^2].Microns()} R{Passes[^1].NC()}\n" +
+                                $"G76 X{EndDiameter} Z{EndPointZ.NC()} P{(int)(Passes.Sum().Microns())} Q{Passes[0].Microns()}{ThreadShift} F{ThreadPitch.NC()}")">
+                    </MudTextField>
+                </MudItem>
+            </MudExpansionPanel>
         }
+    }
 
 </MudContainer>
 
