--- a/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
@@ -130,13 +130,11 @@
                     </MudTextField>
                 </MudItem>
             </MudExpansionPanel>
-        @if(Thread.Valid(ThreadDiameter, ThreadPitch) && ThreadStandart == ThreadStandart.NPT && ThreadType == CuttingType.External && false)
+        @if(ThreadStandart == ThreadStandart.NPT)
         {
             <MudExpansionPanel Text="Пример проточки под резьбу">
                 <MudItem xs="12">
-                    <MudTextField Variant="Variant.Outlined" Style="font-family: 'Roboto Mono', monospace; font-size: small;" Margin="Margin.Dense" ReadOnly="true" Lines="3" Value="@($"G0 X{ApproachDiameter} Z{StartPointZ.NC()} S{SpindleSpeed.Round(100)} M3 G97\n" +
-                                $"G76 P0201{Thread.Profile(ThreadStandart)} Q{Passes[^2].Microns()} R{Passes[^1].NC()}\n" +
-                                $"G76 X{EndDiameter} Z{EndPointZ.NC()} P{(int)(Passes.Sum().Microns())} Q{Passes[0].Microns()}{ThreadShift} F{ThreadPitch.NC()}")">
+                    <MudTextField Variant="Variant.Outlined" Style="font-family: 'Roboto Mono', monospace; font-size: small;" Margin="Margin.Dense" ReadOnly="true" Lines="4" Value="@(TurningExample)">
                     </MudTextField>
                 </MudItem>
             </MudExpansionPanel>
@@ -208,6 +206,47 @@
         }
     }
 
+    public string TurningExample { get
+        {
+            switch (ThreadStandart)
+            {
+                case ThreadStandart.Metric:
+                    switch (ThreadType)
+                    {
+                        case CuttingType.External:
+                            return $"G0 X{(ThreadDiameter - 2 * Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) - InsertRadius).NC()} Z1. S180 M3\n" + 
+                                   $"G1 Z0. F0.1\n" +
+                                   $"X{ThreadDiameter.NC()} C{(Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
+                                   $"G1 Z{EndPointZ.NC()}";
+                        case CuttingType.Internal:
+                            return $"G0 X{(ThreadDiameter - ThreadPitch + 2 * Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius).NC()} Z1. S180 M3\n" +
+                                   $"G1 Z0. F0.1\n" +
+                                   $"X{(ThreadDiameter - ThreadPitch).NC()} C{(Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
+                                   $"G1 Z{EndPointZ.NC()}";
+                        default:
+                            return string.Empty;
+
+                    }
+                case ThreadStandart.NPT:
+                    switch (ThreadType)
+                    {
+                        case CuttingType.External:
+                            return $"G0 X{(ThreadDiameter - 2 * (PlaneLength * Math.Tan(1.79.Radians())) - 2 * Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) - InsertRadius).NC()} Z1. S180 M3\n" +
+                                   $"G1 Z0. F0.1\n" +
+                                   $"X{(ThreadDiameter - 2 * (PlaneLength * Math.Tan(1.79.Radians()))).NC()} C{(Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
+                                   $"G1 Z{EndPointZ.NC()} A-1.79";
+                        case CuttingType.Internal:
+                            return $"G0 X{(ThreadDiameter - 2 * Thread.ProfileHeight(ThreadStandart, ThreadType, ThreadPitch) + 2 * Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius).NC()} Z1. S180 M3\n" +
+                                   $"G1 Z0. F0.1\n" +
+                                   $"X{(ThreadDiameter - 2 * Thread.ProfileHeight(ThreadStandart, ThreadType, ThreadPitch)).NC()} C{(Thread.ThreadChamfer(ThreadStandart, ThreadPitch, ThreadType) + InsertRadius / 2).NC()}\n" +
+                                   $"G1 Z{EndPointZ.NC()} A1.79";
+                        default:
+                            return string.Empty;
+                    }
+                default:
+                    return string.Empty;
+            }
+        } set { } }
 
     //public string ThreadUnits
     //{
@@ -281,6 +320,8 @@
     public double StartPointZ { get; set; } = 2;
     public double EndPointZ { get; set; } = -20;
 
+    public double InsertRadius { get; set; } = 0.4;
+
     private void OnStandartChanged(ThreadStandart value)
     {
         if (ThreadStandart != value)
@@ -301,7 +342,7 @@
             ThreadDiameterString = diameter;
             ThreadPitchString = pitch;
             PlaneLength = 0;
-            EndPointZ = -20 - Math.Round(ThreadPitch, 1);
+            EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandart, ThreadPitch, ThreadType), 1);
         }
         else if (ThreadStandart == ThreadStandart.BSPP)
         {
@@ -309,7 +350,7 @@
             ThreadDiameterString = diameter;
             ThreadPitchString = pitch;
             PlaneLength = 0;
-            EndPointZ = -20 - Math.Round(ThreadPitch, 1);
+            EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandart, ThreadPitch, ThreadType), 1);
         }
         else if (ThreadStandart == ThreadStandart.Trapeziodal)
         {
@@ -325,7 +366,7 @@
             ThreadDiameterString = externalDiameter;
             ThreadPitchString = pitch;
             PlaneLength = planeLength;
-            EndPointZ = -threadLength - Math.Round(ThreadPitch, 1);
+            EndPointZ = -threadLength - Math.Round(Thread.ThreadRunout(ThreadStandart, ThreadPitch, ThreadType), 1);
         }
     }
 }
